# nekRS-LS

./: CMakeLists.txt  README.md  RELEASE.md  build.sh  nrsconfig  runSrcFormat.sh
.github/workflows/: ci.yml
cmake/: core.cmake  elliptic.cmake  gslib.cmake  hypre.cmake  mesh.cmake  nek5000.cmake  nekrs.cmake  occa.cmake  platform.cmake  solver.cmake
config/: hypre.cmake  mesh.cmake  nek5000.cmake  nekrs.cmake  nrs.cmake  utils.cmake
doc/: envHelp.txt  parHelp.txt  parHelpLS.txt
examples/: CMakeLists.txt  README.md
examples/channel/: channel.par  channel.udf  ci.inc
examples/conj_ht/: ci.inc  conj_ht.par  conj_ht.udf
examples/eddyNekNek/: ci.inc  eddy.udf
examples/ethier/: ci.inc  ethier.par  ethier.udf  ethierScalar.par  mv_ethier.par
examples/gabls1/: gabls.par  gabls.udf  gabls.usr
examples/hemi/: hemi.par  hemi.udf
examples/hit/: hit.par  hit.re2  hit.udf  input.box
examples/kershaw/: README.md  kershaw.par  kershaw.udf
examples/ktauChannel/: channel.par  channel.udf  ci.inc
examples/lowMach/: ci.inc  lowMach.par  lowMach.udf
examples/mv_cyl/: ci.inc  mv_cyl.oudf  mv_cyl.par  mv_cyl.udf  mv_cyl_derived_bc.par  mv_cyl_derived_bc.udf
examples/pb146/: pb.par  pb.udf
examples/periodicHill/: ci.inc  periodicHill.par  periodicHill.udf  periodicHill.usr
examples/rbc/: hist.okl  rbc.par  rbc.udf
examples/scalarShock/: shock.par  shock.udf
examples/shlChannel/: channel.oudf  channel.par  channel.udf  ci.inc
examples/tcf/: tcf.nek5000  tcf.par  tcf.udf
examples/tgv/: tgv.oudf  tgv.par  tgv.udf
examples/turbChannel/: turbChannel.par  turbChannel.udf
examples/turbPipe/: ascent.yaml  turbPipe.oudf  turbPipe.par  turbPipe.udf
examples/turbPipePeriodic/: ci.inc  turbPipe.par  turbPipe.udf
kernels/cds/: neumannBCHex3D.okl  strongAdvectionCubatureVolumeHex3D.okl
kernels/cvode/: fusedAddRhoDiv.okl  weakLaplacianHex3D.okl
kernels/elliptic/: ellipticBlockPartialAxCoeffHex3D.okl  ellipticPartialAxCoeffHex3D.okl
kernels/findpts/: findptsLocal.okl
kernels/linAlg/: axpbyMany.c  weightedInnerProdMultiDevice.okl
kernels/mesh/: constantDifferentiationMatrices.h  (+1 more)
scripts/: nlsman  nrs-format  nrsbmpi  nrsman  nrsmpi  nrsqsub_aurora  nrsqsub_frontier  nrsqsub_juwels-booster  nrsqsub_perlmutter  nrsqsub_polaris  nrsqsub_summit  nrsqsub_sunspot  nrsqsub_utils
src/: main.cpp  main.hpp  nrs.hpp  solver.hpp
src/udf/: CMakeLists.txt  ci.hpp  compileUDFKernels.cpp  udf.cpp  udf.hpp  udfHelper.hpp  udfMake.hpp
(+439 files in other folders)
